--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "prisma": "latest",
     "react": "^19",
